--- a/Marvelous-Realms-Engine/Marvelous-Realms-Engine/Marvelous-Realms-Engine.vcxproj
+++ b/Marvelous-Realms-Engine/Marvelous-Realms-Engine/Marvelous-Realms-Engine.vcxproj
@@ -173,7 +173,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\src\main.cpp" />
+    <ClCompile Include="src\BaseApp.cpp" />
+    <ClCompile Include="src\main.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="include\BaseApp.h" />
+    <ClInclude Include="include\Prerequisites.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
