--- a/Marvelous-Realms-Engine/Marvelous-Realms-Engine/Marvelous-Realms-Engine.vcxproj
+++ b/Marvelous-Realms-Engine/Marvelous-Realms-Engine/Marvelous-Realms-Engine.vcxproj
@@ -174,11 +174,15 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="src\BaseApp.cpp" />
+    <ClCompile Include="src\CShape.cpp" />
     <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\Window.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\BaseApp.h" />
+    <ClInclude Include="include\CShape.h" />
     <ClInclude Include="include\Prerequisites.h" />
+    <ClInclude Include="include\Window.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
